--- a/instructions.html
+++ b/instructions.html
@@ -12,6 +12,7 @@
         <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
 
         <ul>
+            <li><a href="index.html">Avaleht</a></li>
             <li><a href="canvastest.html">Generaator</a></li>
             <li><a href="instructions.html">Kasutusjuhis</a></li>
             <li><a href="about.html">Meist</a></li>
