Started adding real text.

--- a/about.html
+++ b/about.html
@@ -21,9 +21,18 @@
     </div>
     <div class="container">
 
+        <h1>Eesmärk</h1>
+        <p>
+            Veebisaidi eesmärk on pakkuda lihtsat ülevaadet Venni diagrammide olemuse kohta ning tööriista, millega neid kiirelt joonistada.
+            Veebisaiti saab kasutada näiteks õppimise kõrvale enesekontrolliks, andmete visualiseerimiseks või lihtsalt uudishimu pärast.
+        </p>
         <h1>Autorid</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea enim explicabo illum iure officia, possimus quas. Amet laudantium numquam quod. Dolorem dolores fuga sint. Exercitationem expedita nihil saepe voluptates!</p>
-
+        <p>
+            Veebisait on valminud Tartu Ülikooli aine Sissejuhatus erialasse raames Andre Anijärve ja Kaarel Kangro paaristööna.
+            Allikatena on kasutatud A. W. F. Edwards'i raamatut "Cogwheels of the Mind: The Story of Venn Diagrams" ning Vikipeediat mõningate jooniste
+            jaoks.
+        </p>
     </div>
+
 </body>
 </html>
