--- a/instructions.html
+++ b/instructions.html
@@ -22,8 +22,39 @@
     <div class="container">
 
         <h1>Kasutusjuhend</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut ea enim explicabo illum iure officia, possimus quas. Amet laudantium numquam quod. Dolorem dolores fuga sint. Exercitationem expedita nihil saepe voluptates!</p>
+        <p>
+            Venni diagrammide generaator pakub kuvamiseks kolme võimalust:
+        </p>
+        <ul>
+            <li><strong>Ainult ringid:</strong><br>See valik kuvab sisestatud avaldise põhjal ainult ringidest koosneva diagrammi, mis alates 4 hulgast ei liigitu enam Venni diagrammiks
+            vaid tegemist on sel juhul Euleri diagrammiga, kus ei ole kõikvõimalikke hulkade vahelisi seoseid kujutatud.</li>
+            <li><strong>Ainult Venni diagramm:</strong><br>Kuvatakse ainult need diagrammid, mis mistahes hulkade arvu puhul liigituvad kindlasti Venni diagrammiks.</li>
+            <li><strong>Võrdle:</strong><br>Kombinatsioon kahest eelnevast valikust. Kuvatakse kõik diagrammid ning punasega märgitakse alad, mis ringide diagrammil ei kajastu.</li>
+        </ul>
 
+        <h2>Sisestamine</h2>
+        <p>
+            Valemi sisestamisel tuleb lähtuda hulgateoreetiliste tehete kirjutamise tavapärastest reeglitest. Vajadusel kasutada sulge.
+        </p>
+        <p>
+            Tähistused:
+        </p>
+        <ul>
+            <li>" | " - ühend</li>
+            <li>" & " - ühisosa</li>
+            <li>" - " - vahe</li>
+            <li>" ^ " - sümmeetriline vahe</li>
+            <li>" ' " - täiend</li>
+
+        </ul>
+
+        <p>Näiteid:</p>
+        <ul>
+            <li>" A&B " - Hulkade A ja B ühisosa</li>
+            <li>" (A|B)' " - Hulkade A ja B ühendi täiend</li>
+            <li>" (A^B)-C " - Hulkade A ja B sümmeetrilise vahe ja hulga C vahe</li>
+        </ul>
     </div>
+
 </body>
 </html>
