--- a/instructions.html
+++ b/instructions.html
@@ -26,8 +26,8 @@
             Venni diagrammide generaator pakub kuvamiseks kolme võimalust:
         </p>
         <ul>
-            <li><strong>Ainult ringid:</strong><br>See valik kuvab sisestatud avaldise põhjal ainult ringidest koosneva diagrammi, mis alates 4 hulgast ei liigitu enam Venni diagrammiks
-            vaid tegemist on sel juhul Euleri diagrammiga, kus ei ole kõikvõimalikke hulkade vahelisi seoseid kujutatud.</li>
+            <li><strong>Ainult ringid:</strong><br>See valik kuvab sisestatud avaldise põhjal ainult ringidest koosneva diagrammi,
+                mis alates 4 hulgast ei liigitu enam Venni diagrammiks ehk seal ei ole kõikvõimalikke hulkade vahelisi seoseid kujutatud.</li>
             <li><strong>Ainult Venni diagramm:</strong><br>Kuvatakse ainult need diagrammid, mis mistahes hulkade arvu puhul liigituvad kindlasti Venni diagrammiks.</li>
             <li><strong>Võrdle:</strong><br>Kombinatsioon kahest eelnevast valikust. Kuvatakse kõik diagrammid ning punasega märgitakse alad, mis ringide diagrammil ei kajastu.</li>
         </ul>
