--- a/instructions.html
+++ b/instructions.html
@@ -34,7 +34,9 @@
 
         <h2>Sisestamine</h2>
         <p>
-            Valemi sisestamisel tuleb lähtuda hulgateoreetiliste tehete kirjutamise tavapärastest reeglitest. Vajadusel kasutada sulge.
+            Valemi sisestamisel tuleb lähtuda hulgateoreetiliste tehete kirjutamise tavapärastest reeglitest. Vajadusel kasutada sulge.<br>
+            Diagrammidel kuvatakse hulgad tähestikulises järjekorras hulgatähiste järgi. Näiteks hulk E paistab sinusoidsetel ja Edwardsi diagrammidel suurema alana/joonena
+            kui hulk M.
         </p>
         <p>
             Tähistused:
