Moved page-specific CSS to separate files.

--- a/about.html
+++ b/about.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Meist</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <title>Meist</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
 
-</head>
-<body>
-    <div id="top">
+    </head>
+    <body>
+        <div id="top">
 
-        <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
 
-        <ul>
-            <li><a href="index.html">Avaleht</a></li>
-            <li><a href="canvastest.html">Generaator</a></li>
-            <li><a href="instructions.html">Kasutusjuhis</a></li>
-            <li><a href="about.html">Meist</a></li>
-        </ul>
-        <div class="remove_float"></div>
-    </div>
-    <div class="container">
+            <ul>
+                <li><a href="index.html">Avaleht</a></li>
+                <li><a href="canvastest.html">Generaator</a></li>
+                <li><a href="instructions.html">Kasutusjuhis</a></li>
+                <li><a href="about.html">Meist</a></li>
+            </ul>
+            <div class="remove_float"></div>
+        </div>
 
-        <h1>Eesmärk</h1>
-        <p>
-            Veebisaidi eesmärk on pakkuda lihtsat ülevaadet Venni diagrammide olemuse kohta ning tööriista, millega neid kiirelt joonistada.
-            Veebisaiti saab kasutada näiteks õppimise kõrvale enesekontrolliks, andmete visualiseerimiseks või lihtsalt uudishimu pärast.
-        </p>
-        <h1>Autorid</h1>
-        <p>
-            Veebisait on valminud Tartu Ülikooli aine Sissejuhatus erialasse raames Andre Anijärve ja Kaarel Kangro paaristööna.
-            Allikatena on kasutatud A. W. F. Edwards'i raamatut "Cogwheels of the Mind: The Story of Venn Diagrams" ning Vikipeediat mõningate jooniste
-            jaoks.
-        </p>
-    </div>
+        <div class="container">
 
-</body>
+            <h1>Eesmärk</h1>
+            <p>
+                Veebisaidi eesmärk on pakkuda lihtsat ülevaadet Venni diagrammide olemuse kohta ning tööriista, millega neid kiirelt joonistada.
+                Veebisaiti saab kasutada näiteks õppimise kõrvale enesekontrolliks, andmete visualiseerimiseks või lihtsalt uudishimu pärast.
+            </p>
+            <h1>Autorid</h1>
+            <p>
+                Veebisait on valminud Tartu Ülikooli aine Sissejuhatus erialasse raames Andre Anijärve ja Kaarel Kangro paaristööna.
+                Allikatena on kasutatud A. W. F. Edwards'i raamatut "Cogwheels of the Mind: The Story of Venn Diagrams" ning Vikipeediat mõningate jooniste
+                jaoks.
+            </p>
+            <ul>
+                <li>Andre Anijärv: Kujundus, teksti- ja pildisisu.</li>
+                <li>Kaarel Kangro: Venni diagrammide generaator.</li>
+            </ul>
+        </div>
+    </body>
 </html>
