--- a/canvastest.html
+++ b/canvastest.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="UTF-8">
-    <title>Generaator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <title>Generaator</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="gen_page.css">
 
-
-</head>
+    </head>
     <body>
         <div id="top">
 
@@ -57,8 +57,8 @@
             </div>
 
             <script src="engine.js"></script>
-
         </div>
+
 
     </body>
 </html>
